fixed strange alignment issue on about page

--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,10 @@ address strong{ font-weight:normal;font-family: 'Roboto', sans-serif; font-weigh
 	max-height: 50px;
 }
 
+.top-row img{
+	margin-right: 30px;
+}
+
 
 
 
